feat: PageTransitionAnimation - extract animation to component, handle initial load fade-in

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,11 +22,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
+  background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb)))
     rgb(var(--background-start-rgb));
 }
 
@@ -41,5 +37,18 @@ body {
 
   .page-padding-top {
     padding-top: calc(var(--header-full-height) + 1rem);
+  }
+
+  .fade-in {
+    animation: fadeIn 1.5s ease-in-out none;
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
   }
 }
