refact: replace custom css classes with tailwind

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,8 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+
+  --extended-header-height: 10rem;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -15,8 +17,6 @@
     --foreground-rgb: 0, 0, 0;
     --background-start-rgb: 214, 219, 220;
     --background-end-rgb: 214, 219, 220;
-
-    --header-full-height: 10rem;
   }
 }
 
@@ -29,13 +29,5 @@ body {
 @layer utilities {
   .text-balance {
     text-wrap: balance;
-  }
-
-  .header-full-height {
-    height: var(--header-full-height);
-  }
-
-  .page-padding-top {
-    padding-top: calc(var(--header-full-height) + 1rem);
   }
 }
